tests/neg/empty-given.scala
given {
  def foo = 1  // error
}